kubernetes-monitoring/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  monitoring

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring
  namespace: monitoring
  labels:
    app: nginx-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: monitoring
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: monitoring
    spec:
      containers:
      - name: monitoring
        image: atalabirchuk/otus:nginx_monitoring_v3
        ports:
          - name: nginx
            containerPort: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
      - name: nginx-exporter
        image: fish/nginx-exporter
        args:
          - -nginx.scrape_uri="http://127.0.0.1:8000/basic_status"
        ports:
          - name: nginx-exporter
            containerPort: 9113
