kubernetes-monitoring/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana  
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: grafana
spec:
  rules:
  - host: grafana.34.89.193.23.nip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-operator-1580560390-grafana
          servicePort: 80
        path: /
  tls:
  - hosts:
    - grafana.34.89.193.23.nip.io
    secretName: grafana.34.89.193.23.nip.io
status:
  loadBalancer:
    ingress:
    - ip: 34.89.128.146
