kubernetes-monitoring/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  namespace: monitoring
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: nginx-test
spec:
  rules:
  - host: nginx-test.34.89.193.23.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx-test
          servicePort: 80
        path: /
  tls:
  - hosts:
    - nginx-test.34.89.193.23.nip.io
    secretName: nginx-test.34.89.193.23.nip.io
status:
  loadBalancer:
    ingress:
    - ip: 34.89.128.146
